# Beginner-Inference-Acceleration

./: .gitignore  README.md
C++/: CMakeLists.txt
C++/src/: CMakeLists.txt  main.cpp
Python/: beginner_inference_accel.ipynb
onnx_inference_acceleration/: README.md
onnx_inference_acceleration/C++/: CMakeLists.txt
torch_tensorRT/: README.md  torch_ttrt_comp.ipynb
torch_tensorRT/tb_logs/pytorch_bs1/: ip-172-31-67-144_55676.1753666560540643648.pt.trace.json  ip-172-31-67-144_55676.1753666641294456244.pt.trace.json  ip-172-31-67-144_55676.1753667010747698599.pt.trace.json
torch_tensorRT/tb_logs/pytorch_bs16/: ip-172-31-67-144_55676.1753666581593680277.pt.trace.json  ip-172-31-67-144_55676.1753666666155107328.pt.trace.json  ip-172-31-67-144_55676.1753667035063069597.pt.trace.json
torch_tensorRT/tb_logs/pytorch_bs32/: ip-172-31-67-144_55676.1753666595828646170.pt.trace.json  ip-172-31-67-144_55676.1753666684453473613.pt.trace.json  ip-172-31-67-144_55676.1753667053804680477.pt.trace.json
torch_tensorRT/tb_logs/pytorch_bs8/: ip-172-31-67-144_55676.1753666570175030899.pt.trace.json  ip-172-31-67-144_55676.1753666652511655700.pt.trace.json  ip-172-31-67-144_55676.1753667021782702802.pt.trace.json
torch_tensorRT/tb_logs/trt_fp16_bs1/: ip-172-31-67-144_55676.1753666560881085825.pt.trace.json  ip-172-31-67-144_55676.1753666641623490245.pt.trace.json  ip-172-31-67-144_55676.1753667011080457805.pt.trace.json
torch_tensorRT/tb_logs/trt_fp16_bs16/: ip-172-31-67-144_55676.1753666583133788264.pt.trace.json  ip-172-31-67-144_55676.1753666667694981843.pt.trace.json  (+1 more)
(+18 files in other folders)
